--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -2,15 +2,17 @@ spring:
   datasource:
     url: jdbc:h2:mem:sdw2025
     username: sdw2025
-    password:
+    password: ""
+    driver-class-name: org.h2.Driver
   jpa:
     show-sql: true
     open-in-view: false
     hibernate:
-      ddl-auto: create  # Opções: validate / update / create / create-drop
+      ddl-auto: update  # Alterado para evitar perda de dados em cada execução
     properties:
       hibernate:
         format_sql: true
+        dialect: org.hibernate.dialect.H2Dialect
   h2:
     console:
       enabled: true
@@ -18,3 +20,11 @@ spring:
       settings:
         trace: false
         web-allow-others: false
+
+springdoc:
+  swagger-ui:
+    path: /swagger-ui.html
+  api-docs:
+    path: /v3/api-docs
+  packages-to-scan: com.cwcdev.dio
+  show-actuator: true
