--- a/build.gradle
+++ b/build.gradle
@@ -22,16 +22,21 @@ dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.6'
-    
+
     runtimeOnly 'com.h2database:h2'
     runtimeOnly 'org.postgresql:postgresql'
-    
+
     providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
-    
+
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
+}
+
+// Adiciona a flag -parameters para manter os nomes dos argumentos
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs.add("-parameters")
 }
